--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,24 @@
 group 'ml.cristatus'
-version = '0.1'
+version = '0.2'
 
 apply plugin: 'java'
 
 sourceCompatibility = 1.7
 
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    compile 'com.google.code.gson:gson:2.6.2'
+}
+
 jar {
+	from {
+		configurations.compile.collect {
+			it.isDirectory() ? it : zipTree(it)
+		}
+	}
     manifest {
         attributes 'Main-Class': 'ml.cristatus.todo.ToDoApp'
     }
